src/BNF Rules
implement           ::= IMPLEMENTATIONS funct_list
funct_list          ::= funct_body
funct_body          ::= FUNCTION pother_oper_def
pother_oper_def     ::= pother_oper IS const_var_struct BEGIN pactions ENDFUN IDENTIFIER
pother_oper         ::= IDENTIFIER
expr                ::= term
term                ::= punary
punary              ::= element
element             ::= IDENTIFIER | STRING_LITERAL | REAL_CONST | INTEGER_CONST
pactions            ::= action_def | pactions action_def
action_def          ::= SET name_ref EQUOP exp | INPUT name_ref| DISPLAY pvar_value_list| RETURN expr
pvar_value_list     ::= expr | pvar_value_list COMMA expr
name_ref            ::= IDENTIFIER opt_ref
opt_ref             ::= array_val
const_var_struct    ::=  var_dec
var_dec             ::= VARIABLES data_declarations
data_declarations   ::= comp_declare | data_declarations comp_declare
comp_declare        ::= DEFINE data_file
data_file           ::= data_declaration
data_type           ::= INTEGER| DOUBLE| LONG| SHORT| FLOAT| REAL
array_val           ::= simp_arr_val
simp_arr_val        ::= arg_list
arg_list            ::= expr | arg_list COMMA expr
